--- a/backup/unit1.lfm
+++ b/backup/unit1.lfm
@@ -3,7 +3,7 @@ object Form1: TForm1
   Height = 600
   Top = 127
   Width = 1300
-  Caption = 'Конвертор в оттенки серого'
+  Caption = 'Конвертор в оттенки серого(Хусаинова Л.Р)'
   ClientHeight = 580
   ClientWidth = 1300
   Menu = MainMenu1
